[workspace]
resolver = "2"
members = ["crates/mcp-gauntlet-core", "crates/mcp-fuzz", "crates/mcp-storm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["StudioMeyer <hello@studiomeyer.io>"]
repository = "https://github.com/studiomeyer-io/mcp-gauntlet"
homepage = "https://github.com/studiomeyer-io/mcp-gauntlet"
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hdrhistogram = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
strip = true
lto = "thin"
opt-level = 3
